Migration to Java 11 and JUnit 5. Modified merge to a list of PDF filenames.